--- a/css/style.less
+++ b/css/style.less
@@ -14,9 +14,15 @@ html, body {
   }
 }
 
+.out { outline: 1px solid #ccc; }
+
 body {
   background-color: rgba(255, 255, 255, 1);
   animation: bodyOpacity 2.75s 1;
+
+  .mdl-textfield {
+    width: 100%;
+  }
 
   .message-body {
     width: 100%;
