--- a/css/style.less
+++ b/css/style.less
@@ -35,6 +35,24 @@ body {
       padding: 4px;
     }
 
+    .notification-close-icon {
+      font-size: 12px;
+      position: absolute;
+      top: 4px;
+      right: 4px;
+      border-radius: 50%;
+      border: solid 1px #ccc;
+      height: 18px;
+      width: 18px;
+      min-width: 18px;
+      cursor: pointer;
+
+      i.material-icons {
+        color: #ccc;
+        font-size: 14px;
+      }
+    }
+
     .icon-place {
       width: 60px;
       text-align: center;
