--- a/css/style.less
+++ b/css/style.less
@@ -19,6 +19,8 @@ html, body {
 body {
   background-color: rgba(255, 255, 255, 1);
   animation: bodyOpacity 2.75s 1;
+  -webkit-app-region: drag;
+  -webkit-user-select: none;
 
   .mdl-textfield {
     width: 100%;
