Open / close notification window functions

--- a/css/style.less
+++ b/css/style.less
@@ -18,9 +18,13 @@ html, body {
 
 body {
   background-color: rgba(255, 255, 255, 1);
-  animation: bodyOpacity 2.75s 1;
+  //animation: bodyOpacity 2.75s 1;
   -webkit-app-region: drag;
   -webkit-user-select: none;
+
+  .animated {
+    animation: bodyOpacity 2.75s 1;
+  }
 
   .mdl-textfield {
     width: 100%;
