--- a/css/style.less
+++ b/css/style.less
@@ -1,5 +1,6 @@
 html, body {
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 @keyframes bodyOpacity {
@@ -18,9 +19,10 @@ html, body {
 
 body {
   background-color: rgba(255, 255, 255, 1);
-  //animation: bodyOpacity 2.75s 1;
   -webkit-app-region: drag;
   -webkit-user-select: none;
+  overflow: hidden;
+  margin: 0;
 
   .animated {
     animation: bodyOpacity 2.75s 1;
